fix align btn

--- a/css/design-project-view.css
+++ b/css/design-project-view.css
@@ -149,15 +149,14 @@ html {
   margin: 0 12px 0 24px;
 }
 
-.btn-play {
+:is(.btn-play, .btn-history) {
   width: 48px;
   height: 48px;
   padding: 12px;
   box-sizing: border-box;
-  background-color: transparent;
 }
 
-.btn-play:hover {
+:is(.btn-play, .btn-history):hover {
   background-color: black;
 }
 
@@ -292,16 +291,9 @@ body:has(.wbaseItem-value[loading="true"]) > #body::after {
   overflow-x: visible;
 }
 
-.right_tab_view {
+:is(.left_tab_view, .right_tab_view) {
   height: calc(100% - 42px);
   overflow-y: scroll;
-  overflow-x: hidden;
-}
-
-.left_tab_view {
-  height: calc(100% - 42px);
-  overflow-x: visible;
-  overflow-y: hidden;
 }
 
 /**/
@@ -368,7 +360,7 @@ body:has(.wbaseItem-value[loading="true"]) > #body::after {
   border-bottom: 1px solid #e5e5e5;
 }
 
-.tab_left {
+:is(.tab_left,.tab_right) {
   padding: 4px;
   margin-right: 8px;
   background-color: transparent;
@@ -380,32 +372,8 @@ body:has(.wbaseItem-value[loading="true"]) > #body::after {
   float: left;
 }
 
-.tab_right {
-  padding: 4px;
-  margin-right: 8px;
-  background-color: transparent;
-  border: none;
-  font-size: 12px;
-  line-height: 16px;
-  font-weight: 700;
-  color: #262626;
-}
-
 .tab_left:hover {
   opacity: 0.7;
-}
-
-.space_line {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  background-color: #e5e5e5;
-}
-
-#unevent_element {
-  pointer-events: none;
 }
 
 #wini_features {
@@ -597,64 +565,6 @@ body:has(.wbaseItem-value[loading="true"]) > #body::after {
   width: 100%;
   box-sizing: border-box;
 }
-
-/* 
-.setting-header {
-  width: 100%;
-  height: 32px;
-  padding: 0 8px 0 16px;
-  box-sizing: border-box;
-  justify-content: space-between;
-}
-
-.setting-header>* {
-  color: rgb(0, 32, 77, 0.25);
-}
-
-.setting-header>button {
-  border: none;
-  outline: none;
-  background-color: transparent;
-}
-
-.setting-header.active>*,
-.setting-header:hover>* {
-  color: #00204D;
-}
-
-.setting-field-container {
-  width: 100%;
-}
-
-.setting-field-container .setting-field-row {
-  width: 100%;
-  padding: 0 8px 0 16px;
-  box-sizing: border-box;
-}
-
-.setting-field-container .setting-field-row>.state-field-label-container {
-  height: 32px;
-  justify-content: space-between;
-}
-
-.setting-field-container .setting-field-row>.state-field-value-container {
-  height: 32px;
-  display: none;
-  box-sizing: border-box;
-  justify-content: space-between;
-}
-
-.setting-field-container .setting-field-row>.state-field-value-container.active {
-  display: flex;
-}
-
-.setting-field-container .setting-field-row>.state-field-label-container>button {
-  display: none;
-}
-
-.setting-field-container .setting-field-row>.state-field-label-container>button.active {
-  display: flex;
-} */
 
 .setting-state-container {
   width: 100%;
